--- a/src/components/TimelineCard/styles.module.css
+++ b/src/components/TimelineCard/styles.module.css
@@ -1,9 +1,9 @@
 .timelineCardContainer {  
   border-radius: 8px;
-  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  
   padding: 1.5rem;
   margin: 1rem 0;
-  transition: transform 0.3s ease, box-shadow 0.3s ease;  
+  
 }
 
 
@@ -48,6 +48,8 @@
     color: #fff;
     position: relative;
     overflow: hidden;
+    
+
     
     transition: box-shadow 0.3s;
     box-shadow: 0 0 31px rgba(0, 0, 0, 0.2);
